<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yizhenwind.booster.framework.widget.HeadlineView
        android:id="@+id/hlv_customer_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headline="@string/customer_detail_name" />

    <com.yizhenwind.booster.framework.widget.HeadlineView
        android:id="@+id/hlv_customer_detail_contact_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headline="@string/customer_detail_contact_type" />

    <com.yizhenwind.booster.framework.widget.HeadlineView
        android:id="@+id/hlv_customer_detail_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headline="@string/customer_detail_contact" />

    <com.yizhenwind.booster.framework.widget.HeadlineView
        android:id="@+id/hlv_customer_detail_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headline="@string/customer_detail_remark" />

    <com.yizhenwind.booster.framework.widget.HeadlineView
        android:id="@+id/hlv_customer_detail_create_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headline="@string/customer_detail_create_time" />

</LinearLayout>